--- a/pubwebsite.css
+++ b/pubwebsite.css
@@ -1,5 +1,6 @@
 body {
-  font-family: Georgia, "PT Serif", serif;
+  font-family: 'Raleway', sans-serif;
+  /*font-family: Georgia, "PT Serif", serif;*/
   font-size: 16px;
   line-height: 1.6;
   padding-top: 10px;
