revert font change

--- a/pubwebsite.css
+++ b/pubwebsite.css
@@ -1,6 +1,5 @@
 body {
-  font-family: 'Raleway', sans-serif;
-  /*font-family: Georgia, "PT Serif", serif;*/
+  font-family: Georgia, "PT Serif", serif;
   font-size: 16px;
   line-height: 1.6;
   padding-top: 10px;
