--- a/pubwebsite.css
+++ b/pubwebsite.css
@@ -1,9 +1,9 @@
 /* Raleway font from Google Fonts*/
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;800&display=swap');
-
+/*@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;800&display=swap');
+*/
 
 body {
-  font-family: 'Raleway', Georgia, serif;
+  font-family: Georgia, serif;
   font-size: 16px;
   line-height: 1.6;
   padding-top: 10px;
