--- a/pubwebsite.css
+++ b/pubwebsite.css
@@ -8,7 +8,7 @@ body {
   line-height: 1.6;
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: white; /*#FFF8F0;*/
+  background-color: #e1b382; /*white;*/ /*#FFF8F0;*/
   padding: 30px; }
   
   
@@ -19,7 +19,7 @@ body > *:last-child {
   margin-bottom: 0 !important; }
 
 a {
-  color: #4183C4; }
+  color: #2d545e; /*#4183C4;*/ }
 a.absent {
   color: #cc0000; }
 a.anchor {
