--- a/pubwebsite.css
+++ b/pubwebsite.css
@@ -8,7 +8,7 @@ body {
   line-height: 1.6;
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: #e1b382; /*white;*/ /*#FFF8F0;*/
+  background-color: #ebcead; /*#e1b382;*/ /*white;*/ /*#FFF8F0;*/
   padding: 30px; }
   
   
